gcp/basic-auth-ingress/base/gcp-credentials.yaml
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  name: backend-updater
spec:
  template:
    spec:
      containers:
      - name: backend-updater
        volumeMounts:
        - mountPath: /var/run/secrets/sa
          name: sa-key
          readOnly: true
      volumes:
      - name: sa-key
        secret:
          secretName: admin-gcp-sa
